# Adafruit_CircuitPython_TSC2046

./: LICENSE  README.rst  README.rst.license  adafruit_tsc2046.py  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: tsc2046_simpletest.py
